# glm2api

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/glm2api/: __main__.py  config.py
src/glm2api/services/: glm_auth.py  glm_client.py  http_client.py
