[project]
name = "glm2api"
version = "0.1.0"
description = "将智谱清言 GLM Web 端接口转换为 OpenAI Chat Completions 兼容 API 的轻量代理。"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "curl-cffi>=0.7.0",
]

[project.scripts]
glm2api = "glm2api.__main__:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
